study/istio-study/02-request-routing/gateway-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reviews-v1
  labels:
    app: reviews
    service: reviews
    version: v1
spec:
  ports:
    - port: 9080
      name: http
  selector:
    app: reviews
    version: v1
---
apiVersion: v1
kind: Service
metadata:
  name: reviews-v2
  labels:
    app: reviews
    service: reviews
    version: v2
spec:
  ports:
    - port: 9080
      name: http
  selector:
    app: reviews
    version: v2
